deployment-test.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: SimpleTimer
      app.kubernetes.io/component: SimpleTimer
      app.kubernetes.io/instance: SimpleTimer
    name: SimpleTimer
  spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: SimpleTimer
    template:
      metadata:
        labels:
          deploymentconfig: SimpleTimer
      spec:
        containers:
        - image: SimpleTimer
          imagePullPolicy: Always
          name: SimpleTimer
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - SimpleTimer
        from:
          kind: ImageStreamTag
          name: SimpleTimer:test
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: SimpleTimer
      app.kubernetes.io/component: SimpleTimer
      app.kubernetes.io/instance: SimpleTimer
    name: SimpleTimer
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: SimpleTimer
      app.kubernetes.io/component: SimpleTimer
      app.kubernetes.io/instance: SimpleTimer
    name: SimpleTimer
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: SimpleTimer
      weight: 100
    wildcardPolicy: None
